SERVER-10075 Forbid illegal forms of TTL indexes during index creation